--- a/WafiSolutionAssignment/Views/Employee/Create.cshtml
+++ b/WafiSolutionAssignment/Views/Employee/Create.cshtml
@@ -1,5 +1,93 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model EmployeeModel
+
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-3">
+                    Create Employee
+                </h2>
+            </div>
+        </div>
+
+    </div>
+
+
+
+    <div class="card-body p-4">
+        <form method="post" class="row" enctype="multipart/form-data">
+            <div class="border p-3">
+                @* <div asp-validation-summary="ModelOnly"> </div>*@
+
+                <div class="mb-3 row p-1">
+                    <label asp-for="FirstName" class="p-0"> </label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+
+                <div class="mb-3 row p-1">
+                    <label asp-for="LastName" class="p-0"> </label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+
+                <div class="mb-3 row p-1">
+                    <label asp-for="Email" class="p-0"> </label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+
+                <div class="mb-3 row p-1">
+                    <label asp-for="MobileNumber" class="p-0"> </label>
+                    <input asp-for="MobileNumber" class="form-control" />
+                    <span asp-validation-for="MobileNumber" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="DateOfBirth" class="p-0"> </label>
+                    <input asp-for="DateOfBirth" class="form-control" />
+                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                </div>
+
+
+                <div class="form-floating py-2 col-12">
+                    <input asp-for="ImageUrl" type="file" name="file" class="form-control border-0 shadow" />
+                    <label asp-for="ImageUrl" class="ms-2"></label>
+                </div>
+
+
+                
+
+                <div class="row" pt-2>
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-primary form-control">Create</button>
+
+                    </div>
+
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="Employee" asp-action="Index" class="btn btn-outline-primary border form-control">
+                            Back to List
+                        </a>
+
+
+                    </div>
+
+                </div>
+
+
+
+            </div>
+
+        </form>
+
+    </div>
+
+
+
+</div>
+
+
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
