--- a/WafiSolutionAssignment/Views/_ViewImports.cshtml
+++ b/WafiSolutionAssignment/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using WafiSolutionAssignment
 @using WafiSolutionAssignment.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using WafiSolutionAssignment.Domain
+@using WafiSolutionAssignment.Models
+@using WafiSolutionAssignment.Controllers
+
