Create Index page for the Employee Controller

--- a/WafiSolutionAssignment/Views/Shared/_Layout.cshtml
+++ b/WafiSolutionAssignment/Views/Shared/_Layout.cshtml
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-2.0.8/datatables.min.css">
     <link href="~/datatables/datatables.min.css" rel="stylesheet" />
     <link href="~/datatables/datatables.css" rel="stylesheet" />
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+   
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.2/css/dataTables.dataTables.css" />
     <style>
 
@@ -74,6 +75,9 @@
 
     <script src="https://cdn.datatables.net/2.1.2/js/dataTables.js"></script>
     <script src="https://cdn.datatables.net/v/dt/dt-2.0.8/datatables.min.js" asp-append-version="true"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
