--- a/WafiSolutionAssignment/Views/Employee/Index.cshtml
+++ b/WafiSolutionAssignment/Views/Employee/Index.cshtml
@@ -67,8 +67,7 @@
 
 
                 <th>Photo</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th>Full Name</th>
                 <th>Email</th>
                 <th>Mobile</th>
                 <th>Date of Birth</th>
@@ -95,8 +94,8 @@
                             return '<img src="' + data + '" alt="Photo" height="50"/>';
                         }
                     },
-                    { "data": "firstName" },
-                    { "data": "lastName" },
+                    
+                    { "data": "fullName" },
                     { "data": "email" },
                     { "data": "mobileNumber" },
                     {
@@ -104,7 +103,21 @@
                             return new Date(data).toLocaleDateString();
                         }
                     },
-                    { "defaultContent": "<button class='btn btn-primary'>Edit</button> <button class='btn btn-danger'>Delete</button>" }
+                    {
+                        "data": 'id',
+                        render: function (data) {
+                            return `<a href="/Employee/Edit/${data}" class="btn btn-primary">Edit</a>
+                                <a href="/Employee/Delete/${data}" class="btn btn-danger">Delete</a>`;
+                        }
+                       
+                    }
+
+
+                    // {
+                    //     "data": "id", "render": function (data, type, full, meta) {
+                    //         return `<button class='btn btn-primary btn-edit' data-id='${data}'>Edit</button> <button class='btn btn-danger btn-delete' data-id='${data}'>Delete</button>`;
+                    //     }
+                    // }
                 ]
             });
 
