--- a/WafiSolutionAssignment/Views/Employee/Index.cshtml
+++ b/WafiSolutionAssignment/Views/Employee/Index.cshtml
@@ -2,44 +2,42 @@
 
 
 <div class="card-body p-4">
-    <form id="searchForm" method="post" class="row">
-        <div class="">
+    <div>
 
-            <div class="">
+    <form id="searchForm" method="post" class="row">
+            <div class="col-md-3">
                 <label asp-for="Name" class="p-0"></label>
                 <input id="name" asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
-            <div class="">
+            <div class="col-md-2">
                 <label asp-for="DateOfBirth" class="p-0"></label>
                 <input id="dob" asp-for="DateOfBirth" class="form-control" />
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
 
-            <div class="">
+            <div class="col-md-3">
                 <label asp-for="Email" class="p-0"></label>
                 <input id="email" asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
 
 
-            <div class="">
+            <div class="col-md-2">
                 <label asp-for="MobileNumber" class="p-0"></label>
                 <input id="mobile" asp-for="MobileNumber" class="form-control" />
                 <span asp-validation-for="MobileNumber" class="text-danger"></span>
             </div>
 
-
-            <div class="" pt-2>
-                <div class="col-6 col-md-3">
-                    <button id="searchButton" type="submit" class="btn btn-primary form-control">Search</button>
-                </div>
+            <div class="col-md-2 mt-3">
+                <button id="searchButton" type="submit" class="btn btn-primary form-control">Search</button>
             </div>
+             
 
-        </div>
 
     </form>
+    </div>
 
 </div>
 
@@ -115,12 +113,22 @@
             });
 
             // Function to reload table data
-            function reloadTableData(searchData) {
+            function reloadTableData() {
+                var searchData = {
+                    Name: $('#name').val(),
+                    DateOfBirth: $('#dob').val(),
+                    MobileNumber: $('#mobile').val(),
+                    Email: $('#email').val()
+                };
+                console.log("searchData: ", searchData);
+
                 $.ajax({
                     url: '@Url.Action("GetAll", "Employee")',
                     type: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify(searchData),
+                    // contentType: 'application/json',
+                   
+
+                    data: searchData,
                     success: function (data) {
                         table.clear();
                         table.rows.add(data);
@@ -135,17 +143,12 @@
             // Handle form submission
             $('#searchForm').submit(function (e) {
                 e.preventDefault();
-                var searchData = {
-                    Name: $('#name').val(),
-                    DateOfBirth: $('#dob').val(),
-                    MobileNumber: $('#mobile').val(),
-                    Email: $('#email').val()
-                };
-                reloadTableData(searchData);
+               
+                reloadTableData();
             });
 
             // Load initial data
-            reloadTableData(null);
+            reloadTableData();
         });
     </script>
 
